force-app/main/default/objects/Collection__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>The contract address of the collection</description>
    <externalId>true</externalId>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>