force-app/main/default/objects/Collection__c/fields/Origin_Chain__c.field-meta.xml
<CustomField>
    <fullName>Origin_Chain__c</fullName>
    <description>The blockchain where the tokens were originally deployed</description>
    <label>Origin Chain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ethereum</fullName>
            </value>
            <value>
                <fullName>Polygon</fullName>
            </value>
            <value>
                <fullName>Solana</fullName>
            </value>
            <value>
                <fullName>Avalanche</fullName>
            </value>
            <value>
                <fullName>Tezos</fullName>
            </value>
            <value>
                <fullName>Near</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>