force-app/main/default/objects/Collection__c/fields/Token_Type__c.field-meta.xml
<CustomField>
    <fullName>Token_Type__c</fullName>
    <label>Token Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERC-721</fullName>
            </value>
            <value>
                <fullName>ERC-1155</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>